--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^7.1.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
