--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
+    "@eslint/js": "^9.1.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.1",
+    "eslint": "^9.1.1",
+    "globals": "^15.1.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
