--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "set-resizable",
   "description": "A small JS library to convert any HTML element into a resizable element.",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "main": "./src/set-resizable.js",
   "directories": {
     "example": "examples"
@@ -29,14 +29,18 @@
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
-    "@eslint/js": "^9.1.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.1",
-    "eslint": "^9.1.1",
     "globals": "^15.1.0",
+    "standard": "^17.1.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
